<resources>
    <string name="app_name">Simple Dice Roller</string>
    <string name="heading1"># of rolls:</string>
    <string name="heading2"># of sides:</string>
    <string name="heading3" />
    <string name="heading4">result:</string>
    <string name="number_d4">1</string>
    <string name="sides_d4">4</string>
    <string name="button_d4">roll d4</string>
    <string name="result_d4">0</string>
    <string name="number_d6">1</string>
    <string name="sides_d6">6</string>
    <string name="button_d6">roll d6</string>
    <string name="result_d6">0</string>
    <string name="number_d8">1</string>
    <string name="sides_d8">8</string>
    <string name="button_d8">roll d8</string>
    <string name="result_d8">0</string>
    <string name="number_d10">1</string>
    <string name="sides_d10">10</string>
    <string name="button_d10">roll d10</string>
    <string name="result_d10">0</string>
    <string name="number_d12">1</string>
    <string name="sides_d12">12</string>
    <string name="button_d12">roll d12</string>
    <string name="result_d12">0</string>
    <string name="number_d20">1</string>
    <string name="sides_d20">20</string>
    <string name="button_d20">roll d20</string>
    <string name="result_d20">0</string>
    <string name="number_d100">1</string>
    <string name="sides_d100">100</string>
    <string name="button_d100">roll d100</string>
    <string name="result_d100">0</string>
    <string name="number_dx">1</string>
    <string name="sides_dx">1</string>
    <string name="button_dx">roll dx</string>
    <string name="result_dx">0</string>
    <string name="history">Roll history</string>
</resources>
