<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toTopOf="@+id/history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTitlebar">

            <TextView
                android:id="@+id/heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/heading1"
                android:textColor="@color/colorTitles"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/heading2"
                android:textColor="@color/colorTitles"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/heading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/heading3"
                android:textColor="@color/colorTitles"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/heading4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/heading4"
                android:textColor="@color/colorTitles"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/number_d4"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:autofillHints="1-99"
                android:background="@color/colorTextFields"
                android:ems="10"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/number_d4"
                android:textColorLink="@color/colorSelection"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="30dp" />

            <TextView
                android:id="@+id/sides_d4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSides"
                android:gravity="center_horizontal"
                android:text="@string/sides_d4" />

            <Button
                android:id="@+id/button_d4"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:onClick="rollD4"
                android:text="@string/button_d4"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/result_d4"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorResults"
                android:gravity="center_horizontal"
                android:text="@string/result_d4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/number_d6"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:autofillHints="1-99"
                android:background="@color/colorTextFields"
                android:ems="10"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/number_d6"
                android:textColorLink="@color/colorSelection"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sides_d6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSides"
                android:gravity="center_horizontal"
                android:text="@string/sides_d6" />

            <Button
                android:id="@+id/button_d6"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:onClick="rollD6"
                android:text="@string/button_d6"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/result_d6"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorResults"
                android:gravity="center_horizontal"
                android:text="@string/result_d6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/number_d8"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:autofillHints="1-99"
                android:background="@color/colorTextFields"
                android:ems="10"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/number_d8"
                android:textColorLink="@color/colorSelection"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sides_d8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSides"
                android:gravity="center_horizontal"
                android:text="@string/sides_d8" />

            <Button
                android:id="@+id/button_d8"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:onClick="rollD8"
                android:text="@string/button_d8"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/result_d8"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorResults"
                android:gravity="center_horizontal"
                android:text="@string/result_d8" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/number_d10"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:autofillHints="1-99"
                android:background="@color/colorTextFields"
                android:ems="10"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/number_d10"
                android:textColorLink="@color/colorSelection"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sides_d10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSides"
                android:gravity="center_horizontal"
                android:text="@string/sides_d10" />

            <Button
                android:id="@+id/button_d10"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:onClick="rollD10"
                android:text="@string/button_d10"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/result_d10"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorResults"
                android:gravity="center_horizontal"
                android:text="@string/result_d10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/number_d12"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:autofillHints="1-99"
                android:background="@color/colorTextFields"
                android:ems="10"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/number_d12"
                android:textColorLink="@color/colorSelection"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sides_d12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSides"
                android:gravity="center_horizontal"
                android:text="@string/sides_d12" />

            <Button
                android:id="@+id/button_d12"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:onClick="rollD12"
                android:text="@string/button_d12"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/result_d12"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorResults"
                android:gravity="center_horizontal"
                android:text="@string/result_d12" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/number_d20"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:autofillHints="1-99"
                android:background="@color/colorTextFields"
                android:ems="10"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/number_d20"
                android:textColorLink="@color/colorSelection"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sides_d20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSides"
                android:gravity="center_horizontal"
                android:text="@string/sides_d20" />

            <Button
                android:id="@+id/button_d20"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:onClick="rollD20"
                android:text="@string/button_d20"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/result_d20"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorResults"
                android:gravity="center_horizontal"
                android:text="@string/result_d20" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/number_d100"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:autofillHints="1-99"
                android:background="@color/colorTextFields"
                android:ems="10"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/number_d100"
                android:textColorLink="@color/colorSelection"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sides_d100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSides"
                android:gravity="center_horizontal"
                android:text="@string/sides_d100" />

            <Button
                android:id="@+id/button_d100"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:onClick="rollD100"
                android:text="@string/button_d100"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/result_d100"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorResults"
                android:gravity="center_horizontal"
                android:text="@string/result_d100" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/number_dx"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:autofillHints="1-99"
                android:background="@color/colorTextFields"
                android:ems="10"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:text="@string/number_dx"
                android:textColorLink="@color/colorSelection"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/sides_dx"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:autofillHints="1-9999"
                android:background="@color/colorTextFields"
                android:ems="10"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="4"
                android:text="@string/sides_dx"
                android:textColorLink="@color/colorSelection"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_dx"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:onClick="rollDx"
                android:text="@string/button_dx"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/result_dx"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorResults"
                android:gravity="center_horizontal"
                android:text="@string/result_dx" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorTextFields"
        android:scrollbars="vertical"
        android:text="@string/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.964" />

</android.support.constraint.ConstraintLayout>